--- a/1dssm.ipynb
+++ b/1dssm.ipynb
@@ -17,12 +17,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24168d8ae93840b89d19d6c9e1aaa026",
+       "model_id": "2e82c12eaffd41aca6ab6d5b20b85632",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter Widget"
+       "Box(children=(Box(children=(Label(value='Offshore Water Depth (m) : ', layout=Layout(width='160px')), Text(val…"
       ]
      },
      "metadata": {},
@@ -123,7 +123,10 @@
     "        l = h0 / m\n",
     "        \n",
     "    x = linspace(0, l, 1000)\n",
-    "    k = (0.80 + 0.065 * 40) / 1000\n",
+    "    if u10 >= 40:\n",
+    "        k = (0.8 + 0.065 * 40) / 1000\n",
+    "    else:\n",
+    "        k = (0.80 + 0.065 * u10) / 1000   \n",
     "    Tauwind = Roa * k * u10 ** 2\n",
     "    A = n * Tauwind * l / (Row * 9.81 * h0 ** 2)\n",
     "    eta = array([0.0 for i in range(len(x))])\n",
@@ -204,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
